--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "@sanmay-sam/auth-middleware",
-  "version": "1.1.0",
+  "version": "1.4.0",
   "description": "Checking for authentication tokens and creating",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -23,6 +28,7 @@
   "devDependencies": {
     "@types/express": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
-    "@types/node": "^22.15.29"
+    "@types/node": "^22.15.29",
+    "typescript": "^5.8.3"
   }
 }
